# Signapse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  SmartGlasses.code-workspace  docker-compose.yaml
.devcontainer/: devcontainer.json
.github/workflows/: client.build.yaml  client.linter.yaml  publish-to-pypi.yaml  server-linter.yaml  server.build.yaml
client/: .env.example  .gitignore  Dockerfile  app.json  eas.json  package-lock.json  package.json  tailwind.config.ts
client/app/: _layout.tsx  about.tsx  camera.tsx  index.tsx  settings.tsx
client/components/: Button.tsx  LandmarksOverlay.tsx
client/lib/: api.ts  app-settings.tsx  const.ts  theme.tsx  useWordBuilder.ts
config/heimdall/: HeimdallExport.json
config/uptime-kuma/: backup.json
docs/Getting Started/: README.md
docs/Getting Started/Development/: buildingGuide.md  setupGuide.md
docs/Getting Started/Development/Client/: android.md  ios.md
docs/info/: README.md  eas-cli.md  expo.md  node.js.md  npm-npx.md
k8s/: Taskfile.yaml  client.config.yaml  client.deployment.yaml  client.hpa.yaml  client.pdb.yaml  client.service.yaml  client.yaml  docs.deployment.yaml  docs.pdh.yaml  docs.service.yaml  documentation.yaml  ingress.yaml  lakefs.config.yaml  lakefs.deployment.yaml  lakefs.service.yaml  minio.config.yaml  minio.deployment.yaml  minio.pvc.yaml  minio.service.yaml  namespace.yaml  postgres.config.yaml  postgres.deployment.yaml  postgres.pvc.yaml  postgres.service.yaml  registry-server.deployment.yaml  registry-server.service.yaml  registry-ui.deployment.yaml  registry-ui.service.yaml  registry-ui.yaml  registry.pvc.yaml  registry.yaml  server.config.yaml  server.deployment.yaml  server.hpa.yaml  server.pdb.yaml  server.service.yaml  server.yaml  traefik-dashboard.ingress.route.yaml
k8s/applications/: client.yaml  documentation.yaml  registry-ui.yaml  registry.yaml  server.yaml
k8s/config-maps/: server-config.yaml
k8s/ingress/: ingress.yaml
k8s/volumes/: registry-pvc.yaml
notebooks/: .dockerignore  .env.template  .gitignore  docker-compose.yml  dockerfile.python3.12  requirements.txt
notebooks/LSTM Test/: .gitignore
notebooks/LSTM Test/Realtime-Sign-Language-Detection-Using-LSTM-Model/: Capture.py  Detector.py  LICENSE  README.md  RealTimeSignLanguageDetection.ipynb  Train.ipynb
notebooks/LSTM Test/Realtime-Sign-Language-Detection-Using-LSTM-Model/.ipynb_checkpoints/: RealTimeSignLanguageDetection-checkpoint.ipynb
notebooks/alphabet/asl_model/: model_version_0.ipynb
notebooks/alphabet/utilities/: training_data_capture.py
notebooks/alphabet/vgt_model/: callbacks.py  data_utils.py  model_utils.py  run_training.py  test_camera.py  train_utils.py
notebooks/alphabet/vgt_model/models/: vgt_model.pth
notebooks/images/dataset/0/: landmarks_all.json
notebooks/images/dataset/1/: landmarks_all.json
notebooks/images/dataset/2/: landmarks_all.json
notebooks/images/dataset/3/: landmarks_all.json
notebooks/images/dataset/4/: landmarks_all.json
notebooks/package/: .dockerignore  LICENSE  README.md  pyproject.toml  setup.cfg
notebooks/package/smart_gestures/: __init__.py
notebooks/package/smart_gestures/alphabet/: __init__.py  const.py
notebooks/package/smart_gestures/alphabet/asl_model/: __init__.py  data_utils.py  model.py  model_utils.py  model_version_0.ipynb  run_training.py  train_utils.py
notebooks/package/smart_gestures/alphabet/vgt_model/: .lakefs_ref.yaml  __init__.py  const.py  data.py  data_utils.py  model.py  model_utils.py  model_version_1.ipynb  run_training.py  test_camera.py  train_utils.py
notebooks/package/smart_gestures/alphabet/vgt_model/data/: classes.json
notebooks/package/smart_gestures/alphabet/vgt_model/models/: vgt_alphabet_model.pth  vgt_model.pth
notebooks/package/smart_gestures/alphabet/vgt_model/training/: callbacks.py  run_training.py  test_camera.py  utils.py
notebooks/package/smart_gestures/gestures/lstm_model/: data_utils.py  gesture_map.json  label_utils.py  model.py
notebooks/package/smart_gestures/gestures/lstm_model/data/: .lakefs_ref.yaml
notebooks/test/: .lakefs_ref.yaml
notebooks/training/asl_model/: data_utils.py  model_asl.ipynb  model_utils.py  run_training.py  train_utils.py
notebooks/training/lstm_model/: data_utils.py  model_lstm.ipynb  model_utils.py  run_training.py  train_utils.py
notebooks/training/vgt_model/: callbacks.py  check_model.py  data_utils.py  model_utils.py  model_vgt.ipynb  run_training.py  train_utils.py
notebooks/utilities/: __init__.py  capture_dataset_lstm.py  csv_to_json.py  download_dataset.py  extract_landmarks_from_dataset.py  spelling_utils.py  static_image_landmarks.py  test_camera.py  training_data_capture.py
server/: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
server/src/: const.py  main.py
server/src/routes/: __init__.py  root.py
server/src/routes/alphabet/: __init__.py
server/src/routes/alphabet/asl_model/: __init__.py
server/src/routes/alphabet/vgt_model/: __init__.py
server/src/routes/keypoints/: __init__.py
server/src/routes/ws/: __init__.py  connection.py
server/src/schemas/: __init__.py  classes.py  keypoints.py  predict.py  status.py
server/src/websocket/: __init__.py  connection_manager.py  message.py
(+36 files in other folders)
