[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]~=0.119.0",
    "mediapipe>=0.10.14",
    "numpy~=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas~=2.3.3",
    "torch~=2.9.0",
    "tqdm>=4.67.1",
    "typing-extensions~=4.15.0",
]
