[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black~=25.9.0",
    "fastapi[standard]~=0.119.0",
    "flake8~=7.3.0",
    "flake8-pyproject~=1.2.3",
    "isort~=7.0.0",
    "mypy~=1.18.2",
    "pre-commit~=4.3.0",
    "typing-extensions~=4.15.0",
    # "smart_gestures==0.2.0",
]


[tool.black]
line-length = 120
target-version = ['py312']
exclude = '''
/(
  \.
  | build
  | dist
  | migrations
  | __pycache__
)
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src"]
default_section = "THIRDPARTY"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
strict = false

[tool.flake8]
# E203: Whitespace before ':' (Black's formatting)
# E501: Line too long (Black's formatting)
extend-ignore = ["E203", "E501"]
exclude = [".git", "__pycache__", "build", "dist"]
