[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart_gestures"
version = "0.2.0"
description = "Utilities and models for ASL alphabet training used in the SmartGlasses project"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9, <3.13"
license = { text = "GPL-3.0-or-later" }
authors = [
	{ name = "Simon Stijnen"},
	{ name = "Lynn Delaere"},
	{ name = "Olivier Westerman"},
]
maintainers = [
  {name = "VIVES University of Applied Sciences - Project XP"}
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Operating System :: OS Independent",
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mediapipe==0.10.21",
    "numpy==1.26.4",
    "pandas==2.3.3",
    "torch==2.7.0",
    "tqdm==4.67.1",
]

[project.urls]
Homepage = "https://github.com/vives-project-xp/SmartGlasses/tree/main/notebooks/package"
Repository = "https://github.com/vives-project-xp/SmartGlasses"
Issues = "https://github.com/vives-project-xp/SmartGlasses/issues"

[tool.setuptools]
packages = { find = {} }
