[metadata]
name = smartglasses-alphabet
version = 0.1.0
description = Utilities and models for ASL alphabet training used in SmartGlasses project
long_description = file: README.md
long_description_content_type = text/markdown
author = Simon Stijnen
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
